# python-cli-template

./: README.md  pyproject.toml
example_python_cli/: basic.py  cli.py  cli_with_subcommands.py  subcommand_one.py  subcommand_two.py
tests/: test_basic.py  test_subcommand_one.py  test_subcommand_two.py
