[project]
name = "example-python-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "example",email = "example@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argparse (>=1.4.0,<2.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "mypy (>=1.14.1,<2.0.0)",
    "ruff (>=0.9.3,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
